--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <h1>
         Este es el taller de eventos
     </h1>
-   <button class="success">Saludar</button>
+   <button onclick="mifunction()">Saludar</button>
 
+<script>
+    function mifunction(){
+        alert("Hola!")
+    }
+</script>
 </body>
 </html>
